mostly working, beginning of plugin

--- a/themes/development/site-1/simpla/templates/_comments.liquid
+++ b/themes/development/site-1/simpla/templates/_comments.liquid
@@ -24,6 +24,8 @@
   <p><input name="submit" type="submit" id="submit" value="Submit Comment" /></p>
 {% endcommentform %}
 
+{% facebookconnect %}
+
 {% else %}
 <p>Sorry, comments are closed for this article.</p>
 {% endif %}
