--- a/app/views/test/test.html.erb
+++ b/app/views/test/test.html.erb
@@ -16,6 +16,10 @@
 		</div>
 	</div>
 
+<div>
+  <a href="#" onclick="streamPost();">Test Stream</a>
+</div>
+
 	<script src="http://static.ak.connect.facebook.com/js/api_lib/v0.4/FeatureLoader.js.php/en_US" type="text/javascript"></script>
 	<script type="text/javascript">
 		initComments();
